New HTML Pages added

--- a/WebContent/app/partials/adminsignin.html
+++ b/WebContent/app/partials/adminsignin.html
@@ -1,5 +1,6 @@
 
 
+	</div>
 <div class="u-form-group1" align="center">
 <button onclick="location.href = 'exam.html'"class="active1" /> Set Exam
 </div>
