--- a/WebContent/app/partials/candidatesignin.html
+++ b/WebContent/app/partials/candidatesignin.html
@@ -1,6 +1,6 @@
 
 
-<div class="u-form-group" align="center">
-<input type="submit" class="active" value="Take A Test"/><br>
-<input type="submit" class="active" value="View Previous Score"/>
+<div class="u-form-group1" align="center">
+<button onclick="location.href = 'candidate.html'"class="active1" /> Exams
+
 </div>
