--- a/WebContent/app/partials/candidatesignin.html
+++ b/WebContent/app/partials/candidatesignin.html
@@ -1,6 +1,4 @@
-
-
 <div class="u-form-group1" align="center">
-<button onclick="location.href = 'candidate.html'"class="active1" /> Exams
-
+	<button onclick="location.href = 'candidate.html'" class="active1" />
+	Exams
 </div>
