--- a/WebContent/app/partials/adminsignin.html
+++ b/WebContent/app/partials/adminsignin.html
@@ -1,7 +1,4 @@
-
-
-	</div>
 <div class="u-form-group1" align="center">
-<button onclick="location.href = 'exam.html'"class="active1" /> Set Exam
+	<button onclick="location.href = 'exam.html'" class="active1" />
+	Set Exam
 </div>
-
