--- a/WebContent/app/partials/over.html
+++ b/WebContent/app/partials/over.html
@@ -5,11 +5,10 @@
 <title>Insert title here</title>
 </head>
 <body align="center">
-<h1 style="color:blue;margin-left: 500px;margin-top: 300px;">Time Over.......!!!!!!!!!!!</h1>
-
-<div align="center">
-<button class="new"/> View Result
-</div><br>
-
+	<h1 style="color: blue; margin-left: 500px; margin-top: 300px;">TimeOver.......!!!!!!!!!!!</h1>
+	<div align="center">
+		<button class="new" />View Result
+	</div>
+	<br>
 </body>
 </html>
