Changes made in css html and js files

--- a/WebContent/app/partials/exam_form.html
+++ b/WebContent/app/partials/exam_form.html
@@ -5,8 +5,8 @@ td {
 }
 </style>
 </head>
-<div class="box" align="center">
-	<table>
+<div align="center" class="box">
+	<table align="center">
 		<tr>
 			<td>Select student:</td>
 			<td><select ng-model="exam.userid" name="exam.userid">
@@ -37,5 +37,6 @@ td {
 	<br>
 	<br>
 	<button class="butt" ng-click="setExam()"/>Done
+	
 	<button ng-click="getExams()" class="butt" />Back
 </div>
