--- a/WebContent/app/partials/students.html
+++ b/WebContent/app/partials/students.html
@@ -12,7 +12,7 @@ td {
 </style>
 </head>
 <div class="box" align="center">
-	<table>
+	<table border="1">
 		<tr>
 			<th>Userid</th>
 			<th>Username</th>
