extra changes made

--- a/WebContent/app/partials/startexam.html
+++ b/WebContent/app/partials/startexam.html
@@ -21,7 +21,7 @@ li {
 			<br> <br>
 			<table>
 				<tr ng-repeat="option in options">
-					<td><input type="radio" ng-model="$parent.option" ng-click="onOptionSelect(option)" name="option" value="{{option}}">{{option}}</td>
+					<td><input type="radio" ng-model="option" ng-click="onOptionSelect(option)" name="option" value="{{option}}">{{option}}</td>
 				</tr>
 			</table>
 			<br> <br> <br>
