--- a/WebContent/app/partials/over.html
+++ b/WebContent/app/partials/over.html
@@ -7,7 +7,7 @@
 <body align="center">
 	<h1 style="color: blue; margin-left: 500px; margin-top: 300px;">TimeOver.......!!!!!!!!!!!</h1>
 	<div align="center">
-		<button class="new" />View Result
+		<button class="new"> View Result </button>
 	</div>
 	<br>
 </body>
