--- a/WebContent/app/partials/exam_form.html
+++ b/WebContent/app/partials/exam_form.html
@@ -17,21 +17,27 @@ td {
 		<tr>
 			<td>Select Template</td>
 			<td><select ng-model="exam.template_id" name="exam.template_id">
-					<option ng-repeat="template in templates" value="template.template_id" ng-selected="selectedTemplate==template.template_id">{{template.template_name}}</option>
+					<option ng-repeat="template in templates" value="template.template_id" ng-selected="selectedTemplate == template.template_id">{{template.template_name}}</option>
 				</select>
 			</td>
 		</tr>
 		<tr>
 			<td>Start Date:</td>
-			<td><input type="date" ng-model="exam.start_date" name="exam.start_date"></td>
+			<div ng-repeat="editExam in editExams">
+				<td><input type="date" name="exam.start_date" ng-selected="selectedDate == editExam.start_date" ng-model="selectedDate"></td>
+			</div>
 		</tr>
 		<tr>
 			<td>Start Time:</td>
-			<td><input type="time" ng-model="exam.start_time" name="exam.start_time"></td>
+			<div ng-repeat="editExam in editExams">
+				<td><input type="time" name="exam.start_time" ng-selected="selectedTime == editExam.start_time" ng-model="selectedTime"></td>
+			</div>
 		</tr>
 		<tr>
 			<td>Duration:</td>
-			<td><input type="text" ng-model="exam.duration" name="exam.duration"></td>
+			<div ng-repeat="editExam in editExams">
+				<td><input type="text" name="exam.duration" ng-selected="selectedDuration == editExam.duration" ng-model="selectedDuration"></td>
+			</div>
 		</tr>
 	</table>
 	<br>
