--- a/WebContent/app/partials/startexam.html
+++ b/WebContent/app/partials/startexam.html
@@ -26,7 +26,7 @@ li {
 			</table>
 			<br> <br> <br>
 			<button align="right" ng-click="checkAnswer(); nextQuestion();" ng-disabled="isOptionSelected" class="next-question" ng-hide="lastQuestion">Next</button>
-			<button align="right" ng-click="checkAnswer(); nextQuestion();" ng-disabled="isOptionSelected" class="next-question" ng-show="lastQuestion">Finish</button>
+			<button align="right" ng-click="checkAnswer(); nextQuestion(); submitResult();" ng-disabled="isOptionSelected" class="next-question" ng-show="lastQuestion">Finish</button>
 		</div>
 		<div ng-show="quizOver">
 			<h2>Quiz is over</h2>
