"template logic for student module completed"

--- a/WebContent/app/partials/current_exams.html
+++ b/WebContent/app/partials/current_exams.html
@@ -1,1 +1,1 @@
-<div student-exam-info show-start="true" filter-val="'remaining'"></div>
+<div student-exam-info start-date="true" start-time="true" is-conducted="false" show-marks="false" show-start="true" filter-val="'remaining'"></div>
