--- a/WebContent/app/partials/all_exams.html
+++ b/WebContent/app/partials/all_exams.html
@@ -1,1 +1,1 @@
-<div student-exam-info show-start="true" filter-val="'all'"></div>
+<div student-exam-info start-date="false" start-time="false" is-conducted="true" show-marks="true" show-start="false" filter-val="'all'"></div>
