--- a/WebContent/app/partials/student_info.html
+++ b/WebContent/app/partials/student_info.html
@@ -1,1 +1,1 @@
-<div student-exam-info show-start="false" filter-val="'all'"></div>
+<div student-exam-info show-marks="true" show-start="false" filter-val="'all'"></div>
