--- a/WebContent/app/partials/exams.html
+++ b/WebContent/app/partials/exams.html
@@ -36,15 +36,9 @@ td {
                 </td>
 			</tr>
 		</table>
-		<br> 
-		<br> 
-		<br> 
-		<br> 
-		<br> 
-		<br>
+		<br><br><br><br><br><br> 
 		<div align="center">
-			<button class="new" ng-click="newExam()" />
-			New Exam
+			<button class="new" ng-click="newExam()" />New Exam
 		</div>
 		<br>
 	</div>
