code optimization part1

--- a/WebContent/app/partials/exams.html
+++ b/WebContent/app/partials/exams.html
@@ -38,7 +38,7 @@ td {
 		</table>
 		<br><br><br><br><br><br> 
 		<div align="center">
-			<button class="new" ng-click="newExam()" />New Exam
+			<button class="new" ng-click="setExam()" />Set Exam
 		</div>
 		<br>
 	</div>
