--- a/WebContent/app/partials/studentinfo.html
+++ b/WebContent/app/partials/studentinfo.html
@@ -11,7 +11,7 @@ td {
 }
 </style>
 </head>
-<div class="box" align="center" ng-controller="usercontroller">
+<div class="box" align="center" ng-controller="userController">
 	<table border="1">
 		<tr>
 			<th>ExamId</th>
