--- a/WebContent/app/css/mystyle1.css
+++ b/WebContent/app/css/mystyle1.css
@@ -15,28 +15,25 @@
 }
 
 .lb-header {
-	position: relative;
 	color: #00415d;
 	margin: 25px 5px 10px 5px;
-	padding-bottom: 10px;
-	border-bottom: 1px solid #eee;
-	text-align: center;
 	height: 28px;
+	margin-left: 353px;
 }
 
-.lb-header a {
-	margin: 0 55px;
-	padding: 0 20px;
+.lb-header #login-box-link{
+	padding: 0 50px;
 	text-decoration: none;
 	color: #797980;
 	font-weight: bold;
 	font-size: 19px;
+	border-bottom: 1px solid #eee;
 	-webkit-transition: all 0.1s linear;
 	-moz-transition: all 0.1s linear;
 	transition: all 0.1s linear;
 }
 
-.lb-header .active:hover {
+.lb-header.active:hover {
 	color: #9999ff;
 }
 
@@ -132,8 +129,4 @@ h1 {
 .top
  
 input
-[
-type
-=
-"text"
-]
+[type="text"]
