--- a/WebContent/app/partials/exams.html
+++ b/WebContent/app/partials/exams.html
@@ -11,7 +11,7 @@ td {
 }
 </style>
 </head>
-<div class="top">
+<div class="top" ng-controller="userController">
 	<div align="center">
 		<div align="center">
 			Search: <input type="text" ng-model="test">
