style of buttons corrected during quiz

--- a/WebContent/app/partials/examform.html
+++ b/WebContent/app/partials/examform.html
@@ -44,7 +44,7 @@ td {
 	</table>
 	<br>
 	<br>
-	<button class="butt" ng-click="setExam()"/>Done
+	<button class="button" ng-click="setExam()"/>Done
 	
-	<button ng-click="getExams()" class="butt" />Back
+	<button ng-click="getExams()" class="button" />Back
 </div>
