--- a/WebContent/app/partials/startexam.html
+++ b/WebContent/app/partials/startexam.html
@@ -10,7 +10,7 @@ li {
 <div align="center">
 	<div class="intro" ng-show="!inProgress">
 		<h2>Best Of Luck !!!!!</h2>
-		<button class="startQuiz" id="button1" ng-click="start()">Start</button>
+		<button class="startQuiz" ng-click="start()">Start</button>
 	</div>
 	<div class="quiz-area" ng-show="inProgress">
 		<div ng-show="!quizOver">
