--- a/WebContent/app/css/mystyle1.css
+++ b/WebContent/app/css/mystyle1.css
@@ -9,9 +9,19 @@
 	padding: 8px;
 }
 
-.box {
-	margin-top: 150px;
+h2 {
+	color: #5A5D5E;
+	margin-top: 184px;
 }
+
+.intro {
+	margin-top: 250px;
+}
+
+.box {
+	margin-top: 250px;
+}
+
 .lb-header {
 	margin: 25px 5px 10px 5px;
 	height: 28px;
@@ -32,13 +42,15 @@
 	transition: all 0.1s linear;
 	padding-top: 7px;
 }
+
 .logout {
   display:inline-block;
   position:fixed;
   right:0;
 }
+
 .lb-header a:hover {
-	color: #9999ff;
+	color: #4682B4;
 }
 
 .page-footer {
@@ -49,11 +61,13 @@
   color: #4682B4;
   text-align: center;
 }
+
 .page-header {
 	color: #4682B4;
 	text-align: center;
 } 
-.box input[type="text"], .box input[type="time"], .box input[type="date"]
+
+.top input[type="text"],.box input[type="text"], .box input[type="time"], .box input[type="date"]
 	{
 	width: 93%;
 	height: 35px;
@@ -68,69 +82,26 @@
 	transition: all 0.1s linear;
 }
 
-.u-form-group1 .active1 {
-	width: 300px;
-	background-color: #268EB8;
-	border: none;
-	outline: none;
-	color: #fff;
-	font-size: 14px;
-	font-weight: normal;
-	padding: 14px 0;
-	border-radius: 7px;
-	text-transform: uppercase;
-	margin-top: 358px;
-}
-
 .top input[type="text"] {
 	width: 20%;
-	height: 35px;
-	outline: none;
-	border: 1px solid #88BCCB;
-	padding: 0 10px;
-	border-radius: 8px;
-	color: #333;
-	font-size: 1.2rem;
-	-webkit-transition: all 0.1s linear;
-	-moz-transition: all 0.1s linear;
-	transition: all 0.1s linear;
 }
-
-.box .butt {
-	width: 100px;
+ .new,.button,.next-question,.startQuiz,.startAgain {
+	width: 103px;
 	background-color: #268EB8;
-	border: none;
 	outline: none;
 	color: #fff;
 	font-size: 14px;
 	font-weight: normal;
 	padding: 14px 0;
-	border-radius: 7px;
 	text-transform: uppercase;
+	margin-top: 49px;
 }
 
-.top .new {
-	width: 100px;
-	background-color: #268EB8;
-	border: none;
-	outline: none;
-	color: #fff;
-	font-size: 14px;
-	font-weight: normal;
-	padding: 14px 0;
-	border-radius: 7px;
-	text-transform: uppercase; 
-	.u-form-group1 a:hover{
- 	  color: #9999ff;
- 	}
-}
-
-h1 {
-	color: #4682B4;
-	position: relative;
+.new:hover,.button:hover,.next-question:hover, .startQuiz:hover, .startAgain:hover {
+	color: #A1A8CE;
 }
 
 .active-tab {
-	background-color: #ebebeb;
-	border-radius: 50px;
+	background-color: #F7F7F7;
+	border-radius: 6px;
 }
