--- a/WebContent/app/css/mystyle.css
+++ b/WebContent/app/css/mystyle.css
@@ -44,7 +44,7 @@ body {
 
 .u-form-group {
 	width: 100%;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 }
 
 .u-form-group input[type="text"], .u-form-group input[type="password"] {
@@ -82,18 +82,8 @@ body {
 	text-transform: uppercase;
 }
 
-.u-form-group .active input[type="submit"] {
-	width: 40%;
-	background-color: #268EB8;
-	border: none;
-	outline: none;
-	color: #fff;
-	font-size: 14px;
-	font-weight: normal;
-	padding: 14px 0;
-	border-radius: 2px;
-	text-transform: uppercase;
-	margin-top: 120px;
+.u-form-group:hover input[type="submit"] {
+	border-radius: 41px;
 }
 
 .page-footer {
